<resources>
    <string name="app_name">QBO Inventory</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_scan">Inventory Re-Stock</string>
    <string name="loading">Loading....</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>



    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_consumer_key">Consumer key</string>
    <string name="pref_title_consumer_secret">Consumer Secret</string>
    <string name="pref_title_access_token">Access Token</string>
    <string name="pref_title_access_token_secret">Acces Token Secret</string>
    <string name="pref_title_upc_db_key">UPC Database key</string>
    <string name="pref_title_qbo_company_id">QBO company Id</string>
    <string name="pref_title_sample_itemname">Sample item name</string>


    <string name="scan_prompt_msg">Scan a barcode</string>
    <string name="sbar_looking_web">Looking for product information on the web....</string>
    <string name="sbar_cannot_read">Cannot read barcode!</string>
    <string name="sbar_update_qty">Item found in QBO. Update quantity?</string>
    <string name="sbar_create_qbo">Item not found in QBO. Create new?</string>
    <string name="sbar_sample_notfound">Item sample not found. Please check sample name setting.</string>
    <string name="sbar_product_found_web">Product found on the internet</string>
    <string name="sbar_product_not_found">Product not found in the web database!</string>
    <string name="sbar_product_notfound_qbo">Unknown product and it\'s not found in QBO!</string>
    <string name="sbar_item_saved">Item saved to QBO!</string>
    <string name="sbar_item_notsaved">Failed to update QBO!!!</string>
    <string name="sbar_invalid_companyid">Invalid Company ID. Please check in setting!!!</string>
    <string name="sbar_sku_dup_error">"More than one item with the same SKU: "</string>
    <string name="setting_load_completed_msg">Keys have been loaded from file!</string>
    <string name="prompt_upc">UPC</string>
    <string name="promptwebname">Name</string>
    <string name="promptqbo">QuickBooks:</string>
    <string name="prompt_qbo_id">QBO-ID</string>
    <string name="prompt_qbo_name">Name</string>
    <string name="prompt_qbo_desc">Desc</string>
    <string name="prompt_qbo_qty">Quantity</string>
    <string name="prompt_qbo_price">Price</string>
    <string name="prompt_qbo_cost">Cost</string>
    <string name="prompt_qbo_created">First imported at</string>
    <string name="prompt_qbo_updated">Last updated at</string>
    <string name="setting_button_text">Load setting from file</string>
    <string name="sbar_generic_qbo_error">"Unable to load QBO company info. Details: "</string>
    <string name="sbar_no_keys_setting">Please go to setting and setup keys!</string>
    <string name="sbar_no_company">QBO company not loaded. Maybe key setting are not correct!</string>
    <string name="sbar_button_create">CREATE</string>
    <string name="sbar_action_update">UPDATE</string>

    <string name="qbo_base_url">https://quickbooks.api.intuit.com</string>
    <string name="qbo_key_filename">qbo.txt</string>
</resources>
